// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-table-stateless-wc should render with _label="Table with horizontal and vertical headers" _hasSettingsMenu=true _headerCells={"horizontal":[[{"key":"header1","label":"Header1","textAlign":"left","width":140},{"key":"header2","label":"Header2","textAlign":"center","width":130},{"key":"header3","label":"Header3","textAlign":"right","width":120}]],"vertical":[[{"key":"row1","label":"Row 1","textAlign":"left","width":80},{"key":"row2","label":"Row 2","textAlign":"center","width":80},{"key":"row3","label":"Row 3","textAlign":"right","width":80}]]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2","header3":"Cell 1.3"},{"header1":"Cell 2.1","header2":"Cell 2.2","header3":"Cell 2.3"},{"header1":"Cell 3.1","header2":"Cell 3.2","header3":"Cell 3.3"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <kol-table-settings-wc></kol-table-settings-wc>
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: calc(80px + 80px + 80px + 140px + 130px + 120px);">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table with horizontal and vertical headers
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <td aria-hidden="true" colspan="1" rowspan="1" style="width: 80px;"></td>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-left kol-table__cell--header kol-table__cell--none" scope="col" style="width: 140px;">
              Header1
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-center kol-table__cell--header kol-table__cell--none" scope="col" style="width: 130px;">
              Header2
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-right kol-table__cell--header kol-table__cell--none" scope="col" style="width: 120px;">
              Header3
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="4"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-left kol-table__cell--header kol-table__cell--none" scope="row" style="width: 80px;">
              Row 1
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 1.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 1.2
            </td>
            <td class="kol-table__cell kol-table__cell--align-right kol-table__cell--body" style="text-align: right;">
              Cell 1.3
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-center kol-table__cell--header kol-table__cell--none" scope="row" style="width: 80px;">
              Row 2
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 2.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 2.2
            </td>
            <td class="kol-table__cell kol-table__cell--align-right kol-table__cell--body" style="text-align: right;">
              Cell 2.3
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-right kol-table__cell--header kol-table__cell--none" scope="row" style="width: 80px;">
              Row 3
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 3.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 3.2
            </td>
            <td class="kol-table__cell kol-table__cell--align-right kol-table__cell--body" style="text-align: right;">
              Cell 3.3
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with merged parent column width only" _headerCells={"horizontal":[[{"label":"Personal Info","colSpan":2,"width":300}],[{"key":"firstName","label":"First Name"},{"key":"lastName","label":"Last Name"}]],"vertical":[]} _data=[{"firstName":"John","lastName":"Doe"},{"firstName":"Jane","lastName":"Smith"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: 300px;">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table with merged parent column width only
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" colspan="2" scope="colgroup" style="width: 300px;">
              Personal Info
            </th>
          </tr>
          <tr class="kol-table__head-row">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" scope="col">
              First Name
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" scope="col">
              Last Name
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="2"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <td class="kol-table__cell kol-table__cell--body">
              John
            </td>
            <td class="kol-table__cell kol-table__cell--body">
              Doe
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <td class="kol-table__cell kol-table__cell--body">
              Jane
            </td>
            <td class="kol-table__cell kol-table__cell--body">
              Smith
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with multiple selection renders selection header with accessible name" _selection={"selectedKeys":[],"keyPropertyName":"id"} _headerCells={"horizontal":[[{"key":"header1","label":"Header 1","width":180}]],"vertical":[]} _data=[{"id":"1","header1":"Cell 1.1"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: 180px;">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table with multiple selection renders selection header with accessible name
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <th class="kol-table__cell kol-table__cell--header kol-table__cell--selection" scope="col">
              <span class="visually-hidden">
                kol-table-selection
              </span>
              <div class="kol-table__selection">
                <label class="kol-table__selection-label">
                  <i aria-hidden="true" class="kol-icon kol-icon__icon kol-table__selection-icon kolicon" role="presentation"></i>
                  <input aria-label="kol-table-selection-all" class="kol-table__selection-input kol-table__selection-input--checkbox" data-testid="selection-checkbox-all" name="selection" type="checkbox">
                </label>
                <div class="kol-table__selection-input-tooltip">
                  <div class="kol-tooltip__floating">
                    <div class="kol-tooltip__arrow"></div>
                    <span class="kol-span kol-tooltip__content" id="kol-table-selection-all-label">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          kol-table-selection-all
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" scope="col" style="width: 180px;">
              Header 1
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="2"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <td class="kol-table__cell kol-table__cell--selection">
              <div class="kol-table__selection">
                <label class="kol-table__selection-label">
                  <i aria-hidden="true" class="kol-icon kol-icon__icon kol-table__selection-icon kolicon" role="presentation"></i>
                  <input aria-label="Selection" class="kol-table__selection-input kol-table__selection-input--checkbox" id="1" name="selection" type="checkbox">
                </label>
                <div class="kol-table__selection-input-tooltip">
                  <div class="kol-tooltip__floating">
                    <div class="kol-tooltip__arrow"></div>
                    <span class="kol-span kol-tooltip__content" id="1-label">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Selection
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td class="kol-table__cell kol-table__cell--body">
              Cell 1.1
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with only horizontal headers" _headerCells={"horizontal":[[{"key":"header1","label":"Header 1","textAlign":"left","width":150},{"key":"header2","label":"Header 2","textAlign":"center","width":180}]],"vertical":[]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2"},{"header1":"Cell 2.1","header2":"Cell 2.2"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: calc(150px + 180px);">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table with only horizontal headers
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-left kol-table__cell--header kol-table__cell--none" scope="col" style="width: 150px;">
              Header 1
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-center kol-table__cell--header kol-table__cell--none" scope="col" style="width: 180px;">
              Header 2
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="2"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 1.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 1.2
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 2.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 2.2
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with single selection renders selection header with accessible name" _selection={"multiple":false,"selectedKeys":[],"keyPropertyName":"id"} _headerCells={"horizontal":[[{"key":"header1","label":"Header 1","width":180}]],"vertical":[]} _data=[{"id":"1","header1":"Cell 1.1"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: 180px;">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table with single selection renders selection header with accessible name
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <th class="kol-table__cell kol-table__cell--header kol-table__cell--selection" scope="col">
              <span class="visually-hidden">
                kol-table-selection
              </span>
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" scope="col" style="width: 180px;">
              Header 1
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="2"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <td class="kol-table__cell kol-table__cell--selection">
              <div class="kol-table__selection">
                <label class="kol-table__selection-label">
                  <input aria-label="Selection" class="kol-table__selection-input kol-table__selection-input--radio" id="1" name="selection" type="radio">
                </label>
                <div class="kol-table__selection-input-tooltip">
                  <div class="kol-tooltip__floating">
                    <div class="kol-tooltip__arrow"></div>
                    <span class="kol-span kol-tooltip__content" id="1-label">
                      <span class="kol-span__container">
                        <span class="kol-span__label">
                          Selection
                        </span>
                        <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </td>
            <td class="kol-table__cell kol-table__cell--body">
              Cell 1.1
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with two horizontal header rows" _headerCells={"horizontal":[[{"label":"Header 1","textAlign":"left"},{"label":"Header 2","textAlign":"center"}],[{"key":"header1","label":"Sub Header 1","textAlign":"left","width":120},{"key":"header2","label":"Sub Header 2","textAlign":"center","width":190}]],"vertical":[[{"key":"row-1","label":"Row 1","textAlign":"left","width":90},{"key":"row-2","label":"Row 2","textAlign":"center","width":90}]]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2"},{"header1":"Cell 2.1","header2":"Cell 2.2"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: calc(90px + 90px + 120px + 190px);">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table with two horizontal header rows
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <td aria-hidden="true" colspan="1" rowspan="2" style="width: 90px;"></td>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-left kol-table__cell--header kol-table__cell--none" scope="col">
              Header 1
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-center kol-table__cell--header kol-table__cell--none" scope="col">
              Header 2
            </th>
          </tr>
          <tr class="kol-table__head-row">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-left kol-table__cell--header kol-table__cell--none" scope="col" style="width: 120px;">
              Sub Header 1
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-center kol-table__cell--header kol-table__cell--none" scope="col" style="width: 190px;">
              Sub Header 2
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="3"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-left kol-table__cell--header kol-table__cell--none" scope="row" style="width: 90px;">
              Row 1
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 1.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 1.2
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-center kol-table__cell--header kol-table__cell--none" scope="row" style="width: 90px;">
              Row 2
            </th>
            <td class="kol-table__cell kol-table__cell--align-left kol-table__cell--body" style="text-align: left;">
              Cell 2.1
            </td>
            <td class="kol-table__cell kol-table__cell--align-center kol-table__cell--body" style="text-align: center;">
              Cell 2.2
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table with two spanned horizontal and vertical headers" _headerCells={"horizontal":[[{"label":"H-Header","colSpan":2}],[{"key":"header1","label":"Sub H-Header 1","width":130},{"key":"header2","label":"Sub H-Header 2","width":130}]],"vertical":[[{"label":"V-Header","rowSpan":2}],[{"label":"Sub V-Header 1","width":100},{"label":"Sub V-Header 2","width":100}]]} _data=[{"header1":"Cell 1.1","header2":"Cell 1.2"},{"header1":"Cell 2.1","header2":"Cell 2.2"}] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: calc(100px + 100px + 130px + 130px);">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table with two spanned horizontal and vertical headers
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <td aria-hidden="true" colspan="2" rowspan="2" style="width: 100px;"></td>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" colspan="2" scope="colgroup">
              H-Header
            </th>
          </tr>
          <tr class="kol-table__head-row">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" scope="col" style="width: 130px;">
              Sub H-Header 1
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" scope="col" style="width: 130px;">
              Sub H-Header 2
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="4"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" rowspan="2" scope="row">
              V-Header
            </th>
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" scope="row" style="width: 100px;">
              Sub V-Header 1
            </th>
            <td class="kol-table__cell kol-table__cell--body">
              Cell 1.1
            </td>
            <td class="kol-table__cell kol-table__cell--body">
              Cell 1.2
            </td>
          </tr>
          <tr class="kol-table__row kol-table__row--body">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" scope="row" style="width: 100px;">
              Sub V-Header 2
            </th>
            <td class="kol-table__cell kol-table__cell--body">
              Cell 2.1
            </td>
            <td class="kol-table__cell kol-table__cell--body">
              Cell 2.2
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table without data shows empty hint" _headerCells={"horizontal":[[{"key":"header1","label":"Header 1","textAlign":"left","width":180}]],"vertical":[]} _data=[] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: 180px;">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table without data shows empty hint
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-left kol-table__cell--header kol-table__cell--none" scope="col" style="width: 180px;">
              Header 1
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="1"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <td aria-atomic="false" aria-live="polite" aria-relevant="text" class="kol-table__cell kol-table__cell--body" colspan="1" rowspan="1">
              kol-no-entries
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table without data with hidden column shows correct colspan" _headerCells={"horizontal":[[{"key":"header1","label":"Header 1","textAlign":"left","width":180},{"key":"header2","label":"Header 2","textAlign":"left","width":180,"visible":false}]],"vertical":[]} _data=[] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: 180px;">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table without data with hidden column shows correct colspan
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--align-left kol-table__cell--header kol-table__cell--none" scope="col" style="width: 180px;">
              Header 1
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="1"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <td aria-atomic="false" aria-live="polite" aria-relevant="text" class="kol-table__cell kol-table__cell--body" colspan="1" rowspan="1">
              kol-no-entries
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;

exports[`kol-table-stateless-wc should render with _label="Table without data with merged header shows spacer colspan greater than 1" _headerCells={"horizontal":[[{"label":"Merged Header","colSpan":2}]],"vertical":[]} _data=[] 1`] = `
<kol-table-stateless-wc>
  <div class="kol-table">
    <span aria-live="polite" class="visually-hidden" role="status"></span>
    <div class="kol-table__scroll-container">
      <table aria-labelledby="caption" class="kol-table__table" style="min-width: 0px;">
        <caption class="kol-table__caption kol-table__focus-element" id="caption">
          Table without data with merged header shows spacer colspan greater than 1
        </caption>
        <thead class="kol-table__head">
          <tr class="kol-table__head-row">
            <th aria-sort="none" class="kol-table__cell kol-table__cell--header kol-table__cell--none" colspan="2" scope="colgroup">
              Merged Header
            </th>
          </tr>
          <tr aria-hidden="true" class="kol-table__spacer kol-table__spacer--head">
            <td class="kol-table__spacer-line kol-table__spacer-line--head" colspan="2"></td>
          </tr>
        </thead>
        <tbody class="kol-table__body">
          <tr class="kol-table__row kol-table__row--body">
            <td aria-atomic="false" aria-live="polite" aria-relevant="text" class="kol-table__cell kol-table__cell--body" colspan="2" rowspan="1">
              kol-no-entries
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</kol-table-stateless-wc>
`;
